Fix #216 Hide does not work on 2.6.4

--- a/style/essential.css
+++ b/style/essential.css
@@ -1991,6 +1991,12 @@ table.calendarmonth.calendartable {
 
 }
 
+/*bug fix*/
+.moodle-actionmenu a.icon i.fa {
+    display:none !important;
+}
+
+
 /* @end */
 
 
