hide general double icons for css selector a i.fa

--- a/style/essential.css
+++ b/style/essential.css
@@ -1992,7 +1992,7 @@ table.calendarmonth.calendartable {
 }
 
 /*bug fix*/
-.moodle-actionmenu a.icon i.fa {
+.moodle-actionmenu a.icon i.fa, a i.fa  {
     display:none !important;
 }
 
